--- a/bp/index.html
+++ b/bp/index.html
@@ -40,20 +40,33 @@ html, body {
 	font-weight: bold;
 }
 #topleft {
-	margin-right: 2em;
+	margin-right: 2.5em;
 	height: 2.4em;
 }
 #site {
 	padding-top: 2.5em;
 }
-#tabh_row, #tabh_col, #vmenu, #vday, #vdl {
-	display: none;
-}
 a {
 	color: #0cf;
 }
-#tabh_row a {
-	width: 32%;
+#tabh_row>* {
+	display: inline-block;
+	border: none;
+	outline: none;
+	margin: 0;
+	padding: .1em 0 .2em 0;
+	width: 33.2%;
+	font-size: 1.77em;
+	height: 1em;
+	overflow: hidden;
+	text-align: center;
+}
+x#tabh_row a:nth-child(2) {
+	text-align: center;
+	background: #222;
+}
+x#tabh_row a:nth-child(3) {
+	text-align: right;
 }
 #brow_prev:before {
 	content: '« ';
@@ -61,7 +74,56 @@ a {
 #brow_next:after {
 	content: ' »';
 }
-#vmenu, #vday {
+#tabh_row .off {
+	color: #555;
+}
+#tabh_col {
+	font-size: 1.5em;
+	padding: .5em 0;
+	margin: 0;
+}
+#tabh_col a {
+	width: 3em;
+	display: inline-block;
+	text-align: center;
+	background: #222;
+	margin: 0 .25em;
+	padding: 0;
+	border: none;
+	outline: none;
+	text-align: center;
+}
+#tabh_txt>* {
+	width: 49%;
+	color: #fc7;
+	background: #111;
+	font-size: 1.8em;
+	position: relative;
+	border: none;
+	outline: none;
+	text-align: center;
+	margin: 0 .5%;
+	padding: 0;
+}
+#vrowlist>* {
+	font-size: 1.5em;
+}
+#vrowlist span {
+	display: inline-block;
+	text-align: left;
+}
+#vrowlist a {
+	display: inline-block;
+	background: #333;
+	padding: .1em .2em;
+	text-decoration: none;
+}
+#vrowlist hr {
+	border-top: 1px solid #333;
+	border-bottom: 1px solid #000;
+	border-width: 1px 0;
+}
+.modal {
 	background: #024;
 	position: fixed;
 	overflow: scroll;
@@ -72,16 +134,14 @@ a {
 	height: 100%;
 	padding: 0 0 2em 0;
 }
-#vmenu a,
-#vday a {
+.modal a {
 	color: #fff;
 	display: block;
 	text-align: center;
 	text-decoration: none;
 	padding: .7em 0;
 }
-#vmenu a:hover,
-#vday a:hover {
+.modal a:hover {
 	background: #246;
 }
 #vdl {
@@ -110,34 +170,51 @@ td:nth-child(2) {
 </head><body>
 <div id="topnav">
 	<a href="#" id="bmenu">=</a>
-	<div id="topleft"></div>
-	<div id="topsub">
-		<div id="tabh_row"
+	<div id="topleft">
+		<div id="tabh_row" class="viewctl"
 			><a href="#" id="brow_prev">//? <!-- jump to previous row -->
 			</a><a href="#" id="brow_list"> List rows
 			</a><a href="#" id="brow_next">//? <!-- jump to next row -->
 		</a></div>
-		<div id="tabh_col">
+	</div>
+	<div id="topsub">
+		<div id="tabh_col" class="viewctl">
 			<!-- will be automatically populated with a cell jumplist which fits the device screen -->
+		</div>
+		<div id="tabh_txt" class="viewctl"
+			><input id="trow_in" value="paste here"
+			><input id="trow_out" value="active loc"
+			></input>
 		</div>
 	</div>
 </div>
 <div id="site">
-	<div id="vmenu">
-		<a href="#" id="bmenu_cancel">Cancel</a>
-		<a href="#" id="bmenu_day">Change day (now: #)</a>
-		<a href="#" id="bmenu_chk">View added booths</a>
-		<a href="#" id="bmenu_cirkan">View all circles (sort: kanji)</a>
-		<a href="#" id="bmenu_cirrom">View all circles (sort: romaji)</a>
-		<a href="#" id="bmenu_row">View all booths (sort: row)</a>
-		<a href="#" id="bmenu_import">Import your list</a>
-		<a href="#" id="bmenu_export">Export your list</a>
-		<a href="#" id="bmenu_dload">Download DB: Day #</a>
+	<div id="vmenu" class="modal">
+		<a href="#" id="bmenu_cancel">◁ Cancel</a>
+		<a href="#" id="bmenu_day">📆 Change day (now: #)</a>
+		<a href="#" id="bmenu_chk">📌 View added booths</a>
+		<a href="#" id="bmenu_srch">🔍 Search for circle</a>
+		<a href="#" id="bmenu_cirkan">⭕語 View all circles (sort: kanji)</a>
+		<a href="#" id="bmenu_cirrom">⭕🔡 View all circles (sort: romaji)</a>
+		<a href="#" id="bmenu_row">⽥ View all booths (sort: row)</a>
+		<a href="#" id="bmenu_import">📂 Import your list</a>
+		<a href="#" id="bmenu_export">💾 Export your list</a>
+		<a href="#" id="bmenu_dload">📲 Download DB: Day #</a>
 	</div>
-	<div id="vday">
+	<div id="vday" class="modal">
 		<a href="#" id="bmenu_day1">土 / 1</a>
 		<a href="#" id="bmenu_day2">日 / 2</a>
 		<a href="#" id="bmenu_day3">月 / 3</a>
+	</div>
+	<div id="vsrchtype" class="modal">
+		<a href="#" id="bmenu_srchrow">Search by row/column</a>
+		<a href="#" id="bmenu_srchname">Search by circle name</a>
+	</div>
+	<div id="vdl" class="modal">
+		Downloading day # ...
+	</div>
+	<div id="vrowlist" class="modal">
+		<!-- will be populated with list of rows -->
 	</div>
 	<div id="vtab">
 		<table>
@@ -151,9 +228,6 @@ td:nth-child(2) {
 			</thead>
 			<tbody id="tb"></tbody>
 		</table>
-	</div>
-	<div id="vdl">
-		Downloading day # ...
 	</div>
 </div>
 <script>
@@ -174,32 +248,68 @@ var ROWS = [
 	'あくけこさしすせそたちつてとな',
 	'いうえおかき'
 ];
+var COLUMNS = [];
+var MAXNCOL = 0;
 var active_day = -1;
+var active_row = 'Ａ';
 var dbday = [];
 var dbsel = [];
+var lol = window.requestAnimationFrame;
+
+
+var ALLROWS = '';
+for (var a = 0; a < ROWS.length; a++)
+	ALLROWS += ROWS[a];
 
 
 function ebi(elm_id) {
 	return document.getElementById(elm_id);
 }
+function ecn(classname) {
+	return document.getElementsByClassName(classname);
+}
+
+
+var html = [];
+for (var a = 0; a < ROWS.length; a++) {
+	html.push('<span>' + HALLS[a] + '</span>');
+	for (var b = 0; b < ROWS[a].length; b++)
+		html.push('<a href="#">' + ROWS[a][b] + '</a>');
+	html.push('<hr />');
+}
+ebi('vrowlist').innerHTML = html.join('\n');
+var links = ebi('vrowlist').getElementsByTagName('a');
+for (var a = 0, aa = links.length; a<aa; a++)
+	links[a].onclick = ev_jumprow;
 
 
 function hide_modals(e) {
 	if (e !== undefined)
 		e.preventDefault();
 	
-	ebi('vmenu').style.display = 'none';
-	ebi('vday').style.display = 'none';
-	ebi('vdl').style.display = 'none';
+	var modals = ecn('modal');
+	for (var a = 0, aa = modals.length; a<aa; a++)
+		modals[a].style.display = 'none';
+}
+function hide_viewctls(e) {
+	if (e !== undefined)
+		e.preventDefault();
+	
+	var modals = ecn('viewctl');
+	for (var a = 0, aa = modals.length; a<aa; a++)
+		modals[a].style.display = 'none';
+}
+function show(html_id) {
+	ebi(html_id).style.display = 'block';
 }
 function show_menu(e) {
 	e.preventDefault();
-	ebi('vmenu').style.display = 'block';
+	show('vmenu');
 }
 function show_chday(e) {
 	e.preventDefault();
 	hide_modals();
-	ebi('vday').style.display = 'block';
+	show('vday');
 }
 function ev_chday(e) {
 	e.preventDefault();
@@ -225,8 +335,8 @@ function load_day(day) {
 		active_day = day;
 	
 	localStorage.setItem('activeday', active_day);
-	ebi('bmenu_day').innerHTML = 'Change day (now: ' + active_day + ')';
-	ebi('bmenu_dload').innerHTML = 'Download DB: Day ' + active_day;
+	ebi('bmenu_day').innerHTML = '📆 Change day (now: ' + active_day + ')';
+	ebi('bmenu_dload').innerHTML = '📲 Download DB: Day ' + active_day;
 	ebi('vdl').innerHTML = 'downloading database for day ' + active_day + ' ...';
 	
 	loaded = localStorage.getItem('day' + active_day);
@@ -241,6 +351,24 @@ function load_day(day) {
 		return false;
 	}
 	dbday = JSON.parse(loaded);
+	
+	MAXNCOL = 0;
+	for (var a = 0; a < ALLROWS.length; a++)
+	{
+		var ncols = 0;
+		for (var b = 0, bb = dbday.length; b<bb; b++) {
+			var rday = dbday[b]['loc'].slice(0, 1);
+			var rrow = dbday[b]['loc'].slice(2, 3);
+			
+			if (rday != active_day) continue;
+			if (rrow != ALLROWS[a]) continue;
+			
+			ncols++;
+		}
+		if (MAXNCOL < ncols)
+			MAXNCOL = ncols;
+	}
+	
 	load_sel();
 	return true;
 }
@@ -302,11 +430,12 @@ function ev_dload() {
 	req.send();
 
 	hide_modals();
-	ebi('vdl').display = 'block';
+	show('vdl');
 }
 function ev_cir(sortfunc) {
+	hide_viewctls();
 	inf(['loading']);
-	window.requestAnimationFrame(function() { window.requestAnimationFrame(function() {
+	lol(function() { lol(function() {
 		var html = [];
 		var dbd = JSON.parse(JSON.stringify(dbday));
 		dbd.sort(sortfunc);
@@ -324,7 +453,95 @@ function ev_cirrom() {
 	ev_cir((a,b) => (a.rom.localeCompare(b.rom)));
 }
 function ev_row() {
+	hide_modals();
+	hide_viewctls();
+	show('tabh_row');
+	show('tabh_col');
+	show('tabh_txt');
+}
+function ev_srch() {
+	hide_modals();
+	show('vsrchtype');
+}
+function ev_srchrow() {
 	
+}
+function ev_srchname() {
+	
+}
+function ev_listrows() {
+	hide_modals();
+	show('vrowlist');
+}
+function ev_jumprow(e) {
+	if (e !== undefined)
+		e.preventDefault();
+
+	goto_row(this.innerHTML);
+}
+function goto_row(row) {
+	hide_modals();
+	active_row = row;
+	var ridx = ALLROWS.indexOf(row);
+	
+	if (ridx == 0) {
+		ebi('brow_prev').classList.add('off');
+		ebi('brow_prev').innerHTML = '🙅';
+	}
+	else {
+		ebi('brow_prev').classList.remove('off');
+		ebi('brow_prev').innerHTML = ALLROWS[ridx-1];
+	}
+	
+	if (ridx > ALLROWS.length - 2) {
+		ebi('brow_next').classList.add('off');
+		ebi('brow_next').innerHTML = '🙅';
+	}
+	else {
+		ebi('brow_next').classList.remove('off');
+		ebi('brow_next').innerHTML = ALLROWS[ridx+1];
+	}
+	
+	COLUMNS = [];
+	for (var a = 0, aa = dbday.length; a<aa; a++) {
+		var rday = dbday[a]['loc'].slice(0, 1);
+		var rrow = dbday[a]['loc'].slice(2, 3);
+		
+		if (rday != active_day) continue;
+		if (rrow != row) continue;
+		
+		COLUMNS.push(dbday[a]['loc'].slice(3));
+	}
+	//alert(COLUMNS);
+	COLUMNS.sort();
+	draw_tabh();
+}
+function draw_tabh() {
+	var dom = ebi('tabh_col');
+	if (dom.style.display == 'none')
+		return;
+	
+	var co = ebi('tabh_col');
+	var width =
+		parseInt(getComputedStyle(co)['width']) /
+		parseFloat(getComputedStyle(co)['font-size']);
+	
+	//var step = Math.ceil(COLUMNS.length / (width/3.5));
+	var free = Math.floor(width/3.5);
+	var step = Math.ceil(MAXNCOL / free);
+	if (step < 1)
+		step = 1;
+	
+	var html = [];
+	for (var a = 0; a < COLUMNS.length; a += step)
+		html.push('<a href="#">' + COLUMNS[a] + '</a>');
+	dom.innerHTML = html.join('');
+}
+function ev_steprow() {
+	if (this.classList.contains('off'))
+		return;
+	
+	goto_row(this.innerHTML);
 }
 
 ebi('bmenu').onclick = show_menu;
@@ -337,7 +554,25 @@ ebi('bmenu_dload').onclick = ev_dload;
 ebi('bmenu_cirkan').onclick = ev_cirkan;
 ebi('bmenu_cirrom').onclick = ev_cirrom;
 ebi('bmenu_row').onclick = ev_row;
+ebi('bmenu_srch').onclick = ev_srch;
+ebi('bmenu_srchrow').onclick = ev_srchrow;
+ebi('bmenu_srchname').onclick = ev_srchname;
+ebi('brow_list').onclick = ev_listrows;
+ebi('brow_prev').onclick = ev_steprow;
+ebi('brow_next').onclick = ev_steprow;
+window.onresize = draw_tabh;
 
-load_day();
+
+// state init
+hide_viewctls();
+
+
+// let's call this a unit test
+if (load_day())
+{
+	ev_row();
+	goto_row('Ａ');
+}
+
 
 </script></body></html>
